--- a/package.json
+++ b/package.json
@@ -4,18 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive ./test"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
+    "chai": "^4.3.10",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "faker": "^6.6.6",
     "google-auth-library": "^9.2.0",
+    "googleapis": "^128.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
     "mongoose-unique-validator": "^4.0.0",
     "nodemailer": "^6.9.7"
+  },
+  "devDependencies": {
+    "mocha": "^10.2.0",
+    "supertest": "^6.3.3"
   }
 }
